<resources>
    <string name="app_name">Popular Movies</string>

    <string name="movie_poster">Movie Poster</string>

    <string name="network_error">Check network and try again.</string>
    <string name="network_error_button">Retry</string>

    <string name="action_sort">Sort by</string>
    <string name="action_sort_by_most_popular">Most popular</string>
    <string name="action_sort_by_top_rated">Top rated</string>
    <string name="action_sort_by_favorites">Favorites</string>

    <string name="release_date">Release date</string>
    <string name="genre">Genre</string>
    <string name="rating">Average rating</string>

    <string name="trailers">Trailers</string>
    <string name="trailer_preview">Trailer Preview</string>

    <string name="reviews">Reviews</string>
    <string name="author">Author :\u0020</string>

    <string name="action_add_fav">Added to favorites</string>
    <string name="action_remove_fav">Removed from favorites</string>

    <string name="share">Share</string>

    <string name="down_arrow">\u25bc</string>
</resources>
